--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Sigmar', cursive;
 }
 
 html,
@@ -18,7 +19,7 @@ canvas {
 input {
   position: absolute;
   height: 30px;
-  padding: 10px;
+  padding: 10px 30px;
   width: calc(100% - 30px);
   margin: 10px;
   z-index: 100;
